--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,11 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+    <com.jstarczewski.pc.mathview.src.MathView
+        android:id="@+id/mvTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    </com.jstarczewski.pc.mathview.src.MathView>
+
 </android.support.constraint.ConstraintLayout>
