--- a/app/src/main/res/layout/activity_recycler_view_example.xml
+++ b/app/src/main/res/layout/activity_recycler_view_example.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#EEEEEE"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".RecyclerViewExampleActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvTest"
