--- a/mathview/src/main/res/values/attrs.xml
+++ b/mathview/src/main/res/values/attrs.xml
@@ -6,7 +6,7 @@
     <attr name="background" format="string"/>
     <attr name="textColor" format="string"/> -->
     <declare-styleable name="MathView">
-        <attr name="text" format="string" localization="suggested" />
+        <attr name="math" format="string"/>
     </declare-styleable>
 
 </resources>
